Updated Slovenian translation
svn path=/trunk/; revision=3004

--- a/po/sl.po
+++ b/po/sl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-10-15 14:51+0100\n"
-"PO-Revision-Date: 2007-12-05 16:24+0100\n"
+"PO-Revision-Date: 2007-12-10 14:35+0100\n"
 "Last-Translator: Matej Urbančič <mateju@svn.gnome.org>\n"
 "Language-Team: Slovenian GNOME Translation Team <gnome-si@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -355,7 +355,7 @@ msgstr "Biologija"
 
 #: ../data/toc.xml.in.h:17
 msgid "Blocks Games"
-msgstr ""
+msgstr "Igre blokov"
 
 #: ../data/toc.xml.in.h:18
 msgid "Board Games"
@@ -431,7 +431,7 @@ msgstr "Nastavitve namizja"
 
 #: ../data/toc.xml.in.h:37
 msgid "Dialup"
-msgstr ""
+msgstr "Klicanje"
 
 #: ../data/toc.xml.in.h:38
 msgid "Dictionary"
@@ -507,7 +507,7 @@ msgstr "GUIDesigner"
 
 #: ../data/toc.xml.in.h:57
 msgid "Generic applications for the GNOME environment"
-msgstr ""
+msgstr "Program GNOME okolja"
 
 #: ../data/toc.xml.in.h:58
 msgid "Generic applications for the KDE environment"
@@ -531,15 +531,15 @@ msgstr "Grafika"
 
 #: ../data/toc.xml.in.h:63
 msgid "Guides and manuals for applications that connect to the outside world"
-msgstr ""
+msgstr "Vodila in priročniki za programe povezane v splet"
 
 #: ../data/toc.xml.in.h:64
 msgid "Guides for getting involved in development"
-msgstr ""
+msgstr "Vodila za sodelovanje pri razvoju programov"
 
 #: ../data/toc.xml.in.h:65
 msgid "HamRadio"
-msgstr ""
+msgstr "HamRadio"
 
 #: ../data/toc.xml.in.h:66
 msgid "HardwareSettings"
@@ -587,7 +587,7 @@ msgstr "Otroške igre"
 
 #: ../data/toc.xml.in.h:77
 msgid "Learn more about making you're system more accessible for a range of disabilities"
-msgstr ""
+msgstr "Spoznajte več o prilagoditvi sistema za širši krog nedostopnosti"
 
 #: ../data/toc.xml.in.h:78
 msgid "Licences"
@@ -671,7 +671,7 @@ msgstr "Upravljalnik paketov"
 
 #: ../data/toc.xml.in.h:98
 msgid "ParallelComputing"
-msgstr ""
+msgstr "Vzporedno računanje"
 
 #: ../data/toc.xml.in.h:99
 msgid "Photography"
@@ -725,7 +725,7 @@ msgstr "Oddaljeni dostop"
 
 #: ../data/toc.xml.in.h:111
 msgid "RevisionControl"
-msgstr ""
+msgstr "Nadzor revizij"
 
 #: ../data/toc.xml.in.h:112
 msgid "Robotics"
@@ -749,7 +749,7 @@ msgstr "Varnost"
 
 #: ../data/toc.xml.in.h:117
 msgid "Sequencer"
-msgstr ""
+msgstr "Sekvenčnik"
 
 #: ../data/toc.xml.in.h:118
 msgid "Settings"
