--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-10  Matej Urbančič  <mateju@svn.gnome.org>
+
+	* sl.po: Updated Slovenian Translation.
+
 2007-12-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
 
 	* pt_BR.po: Fixed translation of "remove".
