Translation updated by Ivar Smolin
2007-12-23  Priit Laes  <plaes at svn dot gnome dot org>

	* et.po: Translation updated by Ivar Smolin

svn path=/trunk/; revision=3009

--- a/po/et.po
+++ b/po/et.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-04 04:07+0000\n"
-"PO-Revision-Date: 2007-12-17 16:48+0200\n"
+"PO-Revision-Date: 2007-12-23 11:34+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -324,7 +324,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:10
 msgid "Arcade Games"
-msgstr ""
+msgstr "Arkaadmängud"
 
 #: ../data/toc.xml.in.h:11
 msgid "Archiving"
@@ -440,7 +440,7 @@ msgstr "Plaadikirjutamine"
 
 #: ../data/toc.xml.in.h:40
 msgid "Economy"
-msgstr ""
+msgstr "Majandus"
 
 #: ../data/toc.xml.in.h:41
 msgid "Education"
@@ -448,7 +448,7 @@ msgstr "Haridus"
 
 #: ../data/toc.xml.in.h:42
 msgid "Electricity"
-msgstr ""
+msgstr "Elekter"
 
 #: ../data/toc.xml.in.h:43
 msgid "Electronics"
@@ -464,7 +464,7 @@ msgstr "Emulaator"
 
 #: ../data/toc.xml.in.h:46
 msgid "Engineering"
-msgstr ""
+msgstr "Tehnika"
 
 #: ../data/toc.xml.in.h:47
 msgid "FileManager"
@@ -610,7 +610,7 @@ msgstr "Meditsiinitarkvara"
 
 #: ../data/toc.xml.in.h:83
 msgid "Midi"
-msgstr ""
+msgstr "Midi"
 
 #: ../data/toc.xml.in.h:84
 msgid "Miscellaneous Documentation"
@@ -618,7 +618,7 @@ msgstr "Mitmesugune dokumentatsioon"
 
 #: ../data/toc.xml.in.h:85
 msgid "Mixer"
-msgstr ""
+msgstr "Mikser"
 
 #: ../data/toc.xml.in.h:86
 msgid "Monitor"
@@ -642,7 +642,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:91
 msgid "OCR"
-msgstr ""
+msgstr "Optiline märgituvastus"
 
 #: ../data/toc.xml.in.h:92
 msgid "Office Applications"
@@ -666,7 +666,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:97
 msgid "PackageManager"
-msgstr ""
+msgstr "Pakihaldur"
 
 #: ../data/toc.xml.in.h:98
 msgid "ParallelComputing"
@@ -762,7 +762,7 @@ msgstr "Simulatsioonimängud"
 
 #: ../data/toc.xml.in.h:121
 msgid "Sound"
-msgstr ""
+msgstr "Heli"
 
 #: ../data/toc.xml.in.h:122
 msgid "Sound &amp; Video"
@@ -826,7 +826,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:137
 msgid "Utilities"
-msgstr ""
+msgstr "Utiliidid"
 
 #: ../data/toc.xml.in.h:138
 msgid "Utilities to help you get work done"
