Updated Norwegian bokmål translation.
2008-01-03  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Updated Norwegian bokmål translation.

svn path=/trunk/; revision=3013

--- a/po/nb.po
+++ b/po/nb.po
@@ -1,13 +1,13 @@
 # Norwegian (bokmål) translation of yelp.
 # Copyright © 2001-2004 Free Software Foundation, Inc.
-# Kjartan Maraas <kmaraas@gnome.org>, 2001-2006.
+# Kjartan Maraas <kmaraas@gnome.org>, 2001-2008.
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.15.x\n"
+"Project-Id-Version: yelp 2.21.x\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-12-17 15:57+0100\n"
-"PO-Revision-Date: 2007-12-17 16:05+0100\n"
+"POT-Creation-Date: 2008-01-03 22:51+0100\n"
+"PO-Revision-Date: 2008-01-03 22:54+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norsk (bokmål) <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
@@ -344,7 +344,7 @@ msgstr "Biologi"
 
 #: ../data/toc.xml.in.h:17
 msgid "Blocks Games"
-msgstr ""
+msgstr "Blokkspill"
 
 #: ../data/toc.xml.in.h:18
 msgid "Board Games"
@@ -368,7 +368,7 @@ msgstr "Kortspill"
 
 #: ../data/toc.xml.in.h:23
 msgid "Chart"
-msgstr ""
+msgstr "Diagram"
 
 #: ../data/toc.xml.in.h:24
 msgid "Chat"
@@ -396,11 +396,11 @@ msgstr "Konstruksjon"
 
 #: ../data/toc.xml.in.h:30
 msgid "ContactManagement"
-msgstr ""
+msgstr "Kontakthåndtering"
 
 #: ../data/toc.xml.in.h:31
 msgid "DataVisualization"
-msgstr ""
+msgstr "Datavisualisering"
 
 #: ../data/toc.xml.in.h:32
 msgid "Database"
@@ -408,7 +408,7 @@ msgstr "Database"
 
 #: ../data/toc.xml.in.h:33
 msgid "Debugger"
-msgstr ""
+msgstr "Feilsøking"
 
 #: ../data/toc.xml.in.h:34
 msgid "Desktop"
@@ -420,7 +420,7 @@ msgstr "Skrivebordsinnstillinger"
 
 #: ../data/toc.xml.in.h:37
 msgid "Dialup"
-msgstr ""
+msgstr "Oppringt samband"
 
 #: ../data/toc.xml.in.h:38
 msgid "Dictionary"
@@ -460,15 +460,15 @@ msgstr "Ingeniørfag"
 
 #: ../data/toc.xml.in.h:47
 msgid "FileManager"
-msgstr ""
+msgstr "Filhåndterer"
 
 #: ../data/toc.xml.in.h:48
 msgid "FileTools"
-msgstr ""
+msgstr "Filverktøy"
 
 #: ../data/toc.xml.in.h:49
 msgid "FileTransfer"
-msgstr ""
+msgstr "Filoverføring"
 
 #: ../data/toc.xml.in.h:50
 msgid "Filesystem"
@@ -480,7 +480,7 @@ msgstr "Finans"
 
 #: ../data/toc.xml.in.h:52
 msgid "FlowChart"
-msgstr ""
+msgstr "Flytdiagram"
 
 #: ../data/toc.xml.in.h:53
 msgid "GNOME Applications"
@@ -496,7 +496,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:57
 msgid "Generic applications for the GNOME environment"
-msgstr ""
+msgstr "Generiske programmer for GNOME"
 
 #: ../data/toc.xml.in.h:58
 msgid "Generic applications for the KDE environment"
@@ -528,11 +528,11 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:65
 msgid "HamRadio"
-msgstr ""
+msgstr "Ham-radio"
 
 #: ../data/toc.xml.in.h:66
 msgid "HardwareSettings"
-msgstr ""
+msgstr "Maskinvareinnstillinger"
 
 #: ../data/toc.xml.in.h:67
 msgid "Have some fun"
@@ -548,15 +548,15 @@ msgstr "IDE"
 
 #: ../data/toc.xml.in.h:70
 msgid "IRCClient"
-msgstr ""
+msgstr "IRC-klient"
 
 #: ../data/toc.xml.in.h:71
 msgid "ImageProcessing"
-msgstr ""
+msgstr "Bildehåndtering"
 
 #: ../data/toc.xml.in.h:72
 msgid "InstantMessaging"
-msgstr ""
+msgstr "Lynmeldinger"
 
 #: ../data/toc.xml.in.h:73
 msgid "Internet"
@@ -658,7 +658,7 @@ msgstr "PDA"
 
 #: ../data/toc.xml.in.h:97
 msgid "PackageManager"
-msgstr ""
+msgstr "Pakkehåndterer"
 
 #: ../data/toc.xml.in.h:98
 msgid "ParallelComputing"
@@ -674,7 +674,7 @@ msgstr "Fysikk"
 
 #: ../data/toc.xml.in.h:101
 msgid "Player"
-msgstr ""
+msgstr "Spiller"
 
 #: ../data/toc.xml.in.h:102
 msgid "Presentation"
@@ -690,7 +690,7 @@ msgstr "Profilering"
 
 #: ../data/toc.xml.in.h:105
 msgid "ProjectManagement"
-msgstr ""
+msgstr "Prosjekthåndtering"
 
 #: ../data/toc.xml.in.h:106
 msgid "Publishing"
@@ -706,11 +706,11 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:109
 msgid "Recorder"
-msgstr ""
+msgstr "Opptaker"
 
 #: ../data/toc.xml.in.h:110
 msgid "RemoteAccess"
-msgstr ""
+msgstr "Fjernaksess"
 
 #: ../data/toc.xml.in.h:111
 msgid "RevisionControl"
@@ -722,11 +722,11 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:113
 msgid "Role Playing Games"
-msgstr ""
+msgstr "Rollespill"
 
 #: ../data/toc.xml.in.h:114
 msgid "Scanning"
-msgstr ""
+msgstr "Skanning"
 
 #: ../data/toc.xml.in.h:115
 msgid "Science"
@@ -750,7 +750,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:120
 msgid "Simulation Games"
-msgstr ""
+msgstr "Simulatorer"
 
 #: ../data/toc.xml.in.h:121
 msgid "Sound"
@@ -794,7 +794,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:131
 msgid "TerminalEmulator"
-msgstr ""
+msgstr "Terminalemulator"
 
 #: ../data/toc.xml.in.h:132
 msgid "Text Tools"
@@ -802,7 +802,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:133
 msgid "TextEditor"
-msgstr ""
+msgstr "Tekstredigering"
 
 #: ../data/toc.xml.in.h:134
 msgid "Tools to help you manage you're computer"
@@ -838,7 +838,7 @@ msgstr "Videokonferanse"
 
 #: ../data/toc.xml.in.h:142
 msgid "Viewer"
-msgstr ""
+msgstr "Visning"
 
 #: ../data/toc.xml.in.h:143
 msgid "WebBrowser"
