--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,7 +1,12 @@
+2008-01-03  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
 2007-12-31  Yannig Marchegay <yannig@marchegay.org>
 
 	* oc.po: Updated Occitan translation.
-2007-12-26  Seán de Búrca  <sdeburca@svn.gnome.org>
+
+2007-12-26  Seán de Búrca  <sdeburca@svn.gnome.org>
 
 	* ga.po: Updated Irish translation.
 
