- String corrections from Seán de Búrca, fixed #505797
* data/toc.xml.in:
- String corrections from Seán de Búrca, fixed #505797

svn path=/trunk/; revision=3014

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-04  Shaun McCance  <shaunm@gnome.org>
+
+	* data/toc.xml.in:
+	- String corrections from Seán de Búrca, fixed #505797
+
 === 2.21.1 ===
 2007-12-03  Don Scorgie  <dscorgie@svn.gnome.org>
 
