Updated Belarusian Latin translation.
svn path=/trunk/; revision=3016

--- a/po/be@latin.po
+++ b/po/be@latin.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-12-08 01:36+0200\n"
-"PO-Revision-Date: 2007-12-08 01:58+0200\n"
+"POT-Creation-Date: 2008-01-06 01:52+0200\n"
+"PO-Revision-Date: 2008-01-06 01:54+0200\n"
 "Last-Translator: Ihar Hrachyshka <ihar.hrachyshka@gmail.com>\n"
 "Language-Team: Belarusian Latin <be-latin.open-tran.eu>\n"
 "MIME-Version: 1.0\n"
@@ -523,7 +523,9 @@ msgstr "Hrafika"
 
 #: ../data/toc.xml.in.h:63
 msgid "Guides and manuals for applications that connect to the outside world"
-msgstr "Padručniki dy daviedniki dla aplikacyj, jakija spałučajucca z vonkavym asiarodździem"
+msgstr ""
+"Padručniki dy daviedniki dla aplikacyj, jakija spałučajucca z vonkavym "
+"asiarodździem"
 
 #: ../data/toc.xml.in.h:64
 msgid "Guides for getting involved in development"
@@ -579,13 +581,14 @@ msgstr "Dziciačyja hulni"
 
 #: ../data/toc.xml.in.h:77
 msgid ""
-"Learn more about making you're system more accessible for a range of "
+"Learn more about making your system more accessible for a range of "
 "disabilities"
 msgstr ""
-"Daviedajsia bolš pra toje, jak zrabić svaju systemu bolej dastupnaj dla ludziej ź niekatorymi peŭnymi fizyčnymi abmiežavańniami"
+"Daviedajsia bolš pra toje, jak zrabić svaju systemu bolej dastupnaj dla "
+"ludziej z raznastajnymi fizyčnymi abmiežavańniami"
 
 #: ../data/toc.xml.in.h:78
-msgid "Licences"
+msgid "Licenses"
 msgstr "Licenzii"
 
 #: ../data/toc.xml.in.h:79
@@ -749,8 +752,9 @@ msgid "Settings"
 msgstr "Nałady"
 
 #: ../data/toc.xml.in.h:119
-msgid "Settings users can manipulate to make their environment more pleasent"
-msgstr "Nałady, jakimi moža kiravać karystalnik, kab zrabić asiarodździe zručniejšym"
+msgid "Settings users can manipulate to make their environment more pleasant"
+msgstr ""
+"Nałady, jakimi moža kiravać karystalnik, kab zrabić asiarodździe bolš pryjemnym"
 
 #: ../data/toc.xml.in.h:120
 msgid "Simulation Games"
@@ -809,7 +813,7 @@ msgid "TextEditor"
 msgstr "Tekstavy redaktar"
 
 #: ../data/toc.xml.in.h:134
-msgid "Tools to help you manage you're computer"
+msgid "Tools to help you manage your computer"
 msgstr "Pryłady, jakija dapamahajuć kiravać svaim kamputaram"
 
 #: ../data/toc.xml.in.h:135
