Updated Spanish translation
svn path=/trunk/; revision=3017

--- a/po/es.po
+++ b/po/es.po
@@ -1,17 +1,18 @@
+# translation of yelp.HEAD.po to Español
 # Spanish translation for yelp
-# Copyright (C) 2001,2003, 2004, 2005, 2006, 2007 Free Software Foundation, Inc.
+# Copyright (C) 2001,2003, 2004, 2005, 2006, 2007, 2008 Free Software Foundation, Inc.
 #
 # Juan Manuel García Molina <juanma_gm@wanadoo.es>, 2001, 2002, 2003.
 # Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2003, 2004, 2005, 2006.
-# Jorge González <jorgegonz@svn.gnome.org>, 2007.
+# Jorge González <jorgegonz@svn.gnome.org>, 2007, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp.HEAD.es\n"
+"Project-Id-Version: yelp.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-12-04 04:07+0000\n"
-"PO-Revision-Date: 2007-12-06 17:58+0100\n"
+"POT-Creation-Date: 2008-01-04 22:28+0000\n"
+"PO-Revision-Date: 2008-01-06 12:07+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
-"Language-Team: Spanish <traductores@es.gnome.org>\n"
+"Language-Team: Español <<gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -580,14 +581,14 @@ msgstr "Juegos de niños"
 
 #: ../data/toc.xml.in.h:77
 msgid ""
-"Learn more about making you're system more accessible for a range of "
+"Learn more about making your system more accessible for a range of "
 "disabilities"
 msgstr ""
-"Aprenda más acerca de cómo hacer su sistema más accesible para cierto número de "
-"discapacidades"
+"Aprenda más acerca de cómo hacer su sistema más accesible para cierto número "
+"de discapacidades"
 
 #: ../data/toc.xml.in.h:78
-msgid "Licences"
+msgid "Licenses"
 msgstr "Licencias"
 
 #: ../data/toc.xml.in.h:79
@@ -751,7 +752,7 @@ msgid "Settings"
 msgstr "Ajustes"
 
 #: ../data/toc.xml.in.h:119
-msgid "Settings users can manipulate to make their environment more pleasent"
+msgid "Settings users can manipulate to make their environment more pleasant"
 msgstr "Ajustes que los usuarios pueden manipular para hacer su entorno más agradable"
 
 #: ../data/toc.xml.in.h:120
@@ -811,7 +812,7 @@ msgid "TextEditor"
 msgstr "Editor de textos"
 
 #: ../data/toc.xml.in.h:134
-msgid "Tools to help you manage you're computer"
+msgid "Tools to help you manage your computer"
 msgstr "Utilidades para ayudarle a gestionar su equipo"
 
 #: ../data/toc.xml.in.h:135
@@ -1491,7 +1492,7 @@ msgstr ""
 #: ../src/yelp-window.c:2401
 msgid "translator-credits"
 msgstr ""
-"Jorge González <jorgegonz@svn.gnome.org>, 2007.\n"
+"Jorge González <jorgegonz@svn.gnome.org>, 2007-2008.\n"
 "Francisco J.F. Serrador <serrador@cvs.gnome.com>, 2003-2006."
 
 #: ../src/yelp-window.c:2404
