Make colours reflect theme better Fix crash on NULL search string. Again.
* src/yelp-settings.c: 
Make colours reflect theme better
* src/yelp-search-parser.c:
Fix crash on NULL search string.  Again.
Correct a small typo in translator comment
* README:
Update slightly to remove scrollkeeper references

svn path=/trunk/; revision=3018

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2008-01-07  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-settings.c: 
+	Make colours reflect theme better
+
+	* src/yelp-search-parser.c:
+	Fix crash on NULL search string.  Again.
+	Correct a small typo in translator comment
+
+	* README:
+	Update slightly to remove scrollkeeper references
+	
 2008-01-04  Shaun McCance  <shaunm@gnome.org>
 
 	* data/toc.xml.in:
