--- a/README
+++ b/README
@@ -10,8 +10,8 @@ Yelp is pronounced the same as the swedish word for 'help'.
 Requirments:
 ------------
 
-* GNOME 2.0 ( >= 2.0.2 )
-* A working ScrollKeeper installation ( > 0.3.14 )
+* GNOME 2.0 ( >= 2.21.1 )
+* A working Rarian installation (0.7.x/0.8.x series)
 * GNOME Documentation Utilities (gnome-doc-utils > 0.5.2)
 * Version 4.1.2 of the DocBook XML DTD
 
@@ -43,18 +43,4 @@ keyword fields. If the patch adds to or changes the GTK programming
 interface, the API keyword should also be included.
   
 Patches should be in unified diff form. (The -u option to GNU diff.)
-
-
-Help on setting your system up:
--------------------------------
-
-A brief note on how to get the docbook stuff to work. 
-
-1) Install Scrollkeeper 0.3.14: 
-http://prdownloads.sourceforge.net/scrollkeeper/scrollkeeper-0.3.14.tar.gz
-
-Edit /etc/scrollkeeper.conf to include your $(gnome2_prefix)/share/omf
-directory. For best use in GNOME 2.0, remove all other directories. 
-
-Run scrollkeeper-update. 
 
