Fix find bar up to look more like epiphany
* src/yelp-window.c: 
Fix find bar up to look more like epiphany

svn path=/trunk/; revision=3019

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2008-01-07  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* src/yelp-window.c: 
+	Fix find bar up to look more like epiphany
+	
 	* src/yelp-settings.c: 
 	Make colours reflect theme better
 
