Update Changelog.  Must save before committing
svn path=/trunk/; revision=3020

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* src/yelp-window.c: 
 	Fix find bar up to look more like epiphany
+	Bug #483305 - Michael Monreal
 	
 	* src/yelp-settings.c: 
 	Make colours reflect theme better
