--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+=== 2.21.2 ===
+2008-01-07  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* configure.in:
+	* NEWS:
+	Version 2.21.2
+
 2008-01-07  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* configure.in: 
