--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,28 @@
+Changed in 2.21.2:
+------------------
+
+* Add LZMA support - bug #470990 
+  - Per Øyvind Karlsen
+* Fix find bar up to look more like epiphany - bug #483305 
+  - Michael Monreal
+* Make colours reflect theme better
+* Fix crash on NULL search string.  Again.
+* String corrections - bug #505797
+  - Seán de Búrca
+* Updated translations:
+  * ar (Djihed Afifi)
+  * be@latin (Ihar Hrachyshka)
+  * es (Jorge Gonzalez)
+  * et (Priit Laes)
+  * ga (Seán de Búrca)
+  * ko (Changwoo Ryu)
+  * nb (Kjartan Maraas)
+  * oc (Yannig Marchegay)
+  * pt_BR (Leonardo Ferreira Fontenelle)
+  * sl (Matej Urbančič)
+  * sv (Daniel Nylander)
+  * vi (Clytie Siddall)
+
 Changed in 2.21.1:
 ------------------
 
