--- a/po/sv.po
+++ b/po/sv.po
@@ -1,6 +1,6 @@
 # Swedish messages for Yelp.
-# Copyright (C) 2001-2007 Free Software Foundation, Inc.
-# Daniel Nylander <po@danielnylander.se>, 2006, 2007.
+# Copyright (C) 2001-2008 Free Software Foundation, Inc.
+# Daniel Nylander <po@danielnylander.se>, 2006, 2008.
 # Richard Hult <rhult@codefactory.se>, 2001.
 # Christian Rose <menthos@menthos.com>, 2001, 2002, 2003, 2004, 2005.
 #
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-12-16 16:20+0100\n"
-"PO-Revision-Date: 2007-12-16 16:37+0100\n"
+"POT-Creation-Date: 2008-01-09 00:11+0100\n"
+"PO-Revision-Date: 2008-01-09 00:13+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
@@ -580,12 +580,12 @@ msgid "Kids Games"
 msgstr "Barnspel"
 
 #: ../data/toc.xml.in.h:77
-msgid "Learn more about making you're system more accessible for a range of disabilities"
-msgstr "Lär dig mer om hur du gör ditt system mer åtkomligt för personer med handikapp"
+msgid "Learn more about making your system more accessible for a range of disabilities"
+msgstr "Lär dig mer om hur du gör ditt system mer åtkomligt för personer med olika handikapp"
 
 #: ../data/toc.xml.in.h:78
-msgid "Licences"
-msgstr "Licencer"
+msgid "Licenses"
+msgstr "Licenser"
 
 #: ../data/toc.xml.in.h:79
 msgid "Literature"
@@ -750,7 +750,7 @@ msgid "Settings"
 msgstr "Inställningar"
 
 #: ../data/toc.xml.in.h:119
-msgid "Settings users can manipulate to make their environment more pleasent"
+msgid "Settings users can manipulate to make their environment more pleasant"
 msgstr "Inställningar som användare kan ändra för att göra sin miljö mer behaglig"
 
 #: ../data/toc.xml.in.h:120
@@ -810,8 +810,8 @@ msgid "TextEditor"
 msgstr "Textredigerare"
 
 #: ../data/toc.xml.in.h:134
-msgid "Tools to help you manage you're computer"
-msgstr "Verktyg för att hantera din dator"
+msgid "Tools to help you manage your computer"
+msgstr "Verktyg för att hjälpa dig att hantera din dator"
 
 #: ../data/toc.xml.in.h:135
 msgid "Translation"
@@ -1080,7 +1080,7 @@ msgid "Unknown Error"
 msgstr "Okänt fel"
 
 #: ../src/yelp-error.c:136
-#: ../src/yelp-window.c:1581
+#: ../src/yelp-window.c:1582
 msgid "Could Not Read File"
 msgstr "Kunde inte läsa filen"
 
@@ -1093,7 +1093,7 @@ msgstr "Ingen information finns tillgänglig om felet."
 msgid "The file ‘%s’ could not be parsed because it is not a well-formed info page."
 msgstr "Filen \"%s\" kunde inte tolkas därför att den inte en korrekt formaterad infosida."
 
-#: ../src/yelp-io-channel.c:107
+#: ../src/yelp-io-channel.c:123
 #, c-format
 msgid "The file ‘%s’ could not be read and decoded. The file may be compressed in an unsupported format."
 msgstr "Filen \"%s\" kunde inte läsas och avkodas. Filen kan vara komprimerad med ett format som inte stöds."
@@ -1207,7 +1207,7 @@ msgstr "NULL"
 #. * to words.  Things that may be put at ends of words to slightly
 #. * alter their meaning (like -ing and -s in English).  This is a
 #. * colon seperated list (I like colons).  If there are none,
-#. * please use the strig NULL.  If there is only 1, please
+#. * please use the string NULL.  If there is only 1, please
 #. * add a colon at the end of the list
 #.
 #: ../src/yelp-search-parser.c:890
@@ -1303,7 +1303,7 @@ msgstr "Skriv ut den här sidan ..."
 
 #: ../src/yelp-window.c:320
 msgid "About This Document"
-msgstr "Om detta dokument"
+msgstr "Om det här dokumentet"
 
 #: ../src/yelp-window.c:325
 msgid "Open _Location"
@@ -1375,7 +1375,7 @@ msgstr "Gå till listan med hjälprubriker"
 
 #: ../src/yelp-window.c:394
 msgid "_Previous Section"
-msgstr "_Föregående avsnitt"
+msgstr "Föregående a_vsnitt"
 
 #: ../src/yelp-window.c:399
 msgid "_Next Section"
@@ -1424,7 +1424,7 @@ msgstr "Hjälpvisare"
 
 #: ../src/yelp-window.c:586
 #: ../src/yelp-window.c:638
-#: ../src/yelp-window.c:1635
+#: ../src/yelp-window.c:1636
 msgid "Loading..."
 msgstr "Läser in..."
 
@@ -1464,30 +1464,30 @@ msgstr "Kan inte skapa fönster"
 msgid "Cannot create search component"
 msgstr "Kan inte skapa sökkomponent"
 
-#: ../src/yelp-window.c:1405
+#: ../src/yelp-window.c:1406
 msgid "Fin_d:"
 msgstr "Sö_k:"
 
-#: ../src/yelp-window.c:1425
-msgid "Find _Next"
-msgstr "Sök _nästa"
-
-#: ../src/yelp-window.c:1437
+#: ../src/yelp-window.c:1426
 msgid "Find _Previous"
 msgstr "Sök _föregående"
 
-#: ../src/yelp-window.c:1450
+#: ../src/yelp-window.c:1438
+msgid "Find _Next"
+msgstr "Sök _nästa"
+
+#: ../src/yelp-window.c:1451
 msgid "Phrase not found"
 msgstr "Frasen hittades inte"
 
-#: ../src/yelp-window.c:1578
+#: ../src/yelp-window.c:1579
 #, c-format
 msgid "The file ‘%s’ could not be read.  This file might be missing, or you might not have permissions to read it."
 msgstr "Filen \"%s\" kunde inte läsas. Filen kanske saknas eller så har du inte rättigheter att läsa den."
 
 #. Note to translators: put here your name (and address) so it
 #. * will show up in the "about" box
-#: ../src/yelp-window.c:2401
+#: ../src/yelp-window.c:2402
 msgid "translator-credits"
 msgstr ""
 "Daniel Nylander\n"
@@ -1497,11 +1497,11 @@ msgstr ""
 "Skicka synpunkter på översättningen till\n"
 "tp-sv@listor.tp-sv.se"
 
-#: ../src/yelp-window.c:2404
+#: ../src/yelp-window.c:2405
 msgid "Yelp"
 msgstr "Yelp"
 
-#: ../src/yelp-window.c:2406
+#: ../src/yelp-window.c:2407
 msgid "A documentation browser and viewer for the Gnome Desktop."
 msgstr "En dokumentationsläsare och -visare för GNOME-skrivbordet."
 
