--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-01-10  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-search-parser.c: 
+	Get a beagle client if it's available
+	allowing beagle to be used again
+	(bug #504163)
+
 === 2.21.2 ===
 2008-01-07  Don Scorgie  <dscorgie@svn.gnome.org>
 
