Remove depreciated items (bug #500483)
* yelp.desktop.in.in: 
Remove depreciated items
(bug #500483)

svn path=/trunk/; revision=3030

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-10  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* yelp.desktop.in.in: 
+	Remove depreciated items
+	(bug #500483)
+	
 	* src/yelp-search-parser.c: 
 	Fix potential crash when comment is NULL
 	(bug #501559 - Matt Keenan)
