Fix some menu titles to be non-insane names Add translator comments to
* data/toc.xml.in: 
Fix some menu titles to be non-insane names
Add translator comments to unclear menu entries

svn path=/trunk/; revision=3032

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-13  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* data/toc.xml.in: 
+	Fix some menu titles to be non-insane names
+	Add translator comments to unclear menu entries
+
 2008-01-10  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* yelp.desktop.in.in: 
